--- a/css/styles.css
+++ b/css/styles.css
@@ -49,3 +49,39 @@ body {
     margin: 0 auto;
     margin-top: 30px;
 }
+
+/* CONTATO INDIVIDUAL */
+
+#view-contact-container {
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+#back-link-container {
+    display: block;
+    width: 500px;
+    margin: 30px auto 0;
+}
+
+#back-link {
+    border: 1px solid blue;
+    color: blue;
+    border-radius: 4px;
+    padding: 5px;
+}
+
+#back-link:hover {
+    text-decoration: none;
+}
+
+/* CREATE */
+
+#create-form,
+#edit-form {
+    max-width: 500px;
+    margin: 0 auto;
+}
